--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -176,6 +176,7 @@
               type="text"
               formControlName="state"
               class="form-control p-3"
+              value="Goa"
               readonly
             />
           </div>
@@ -185,6 +186,7 @@
               type="text"
               formControlName="city"
               class="form-control p-3"
+              value="Panaji"
               readonly
             />
           </div>
@@ -240,8 +242,8 @@
             >
               <option value="">Select Institution Type</option>
               <option value="1">School</option>
-              <option value="1">College</option>
-              <option value="1">University</option>
+              <option value="2">College</option>
+              <option value="3">University</option>
             </select>
             <div
               *ngIf="
@@ -274,25 +276,67 @@
           </div>
         </div>
         <div class="form-group row text-white d-lg-flex">
+          <div class="col-12 col-lg-4">
+            <label for="address_proof_type">Address Proof Type</label>
+            <select
+              formControlName="address_proof_type"
+              class="form-control p-3"
+              id="address_proof_type"
+            >
+              <option value="">Select Address Proof Type</option>
+              <option value="Electricity Bill">Electricity Bill</option>
+              <option value="Passport">Passport</option>
+              <option value="Voter ID">Voter ID</option>
+              <option value="PAN">PAN</option>
+              <option value="Aadhar Card">Aadhar Card</option>
+            </select>
+            <div
+              *ngIf="
+                studentForm.get('address_proof_type')?.invalid &&
+                studentForm.get('address_proof_type')?.touched
+              "
+              class="text-warning"
+              style="font-weight: 800"
+            >
+              Address Proof Type is required
+            </div>
+          </div>
           <div class="col-12 col-lg-3 pb-3">
             <label>Upload Address Proof Document</label>
-            <input type="file" formControlName="proofAddress" class="form-control p-3" accept=".pdf, .jpg, .jpeg, .png" (change)="validateFileSize($event, 'proofAddress')" />
+            <input type="file" class="form-control p-3" accept=".pdf, .jpg, .jpeg, .png" (change)="validateFileSize($event, 'proofAddress')" />
             <small>Document Size has to be less than 1MB.</small>
             <div *ngIf="fileErrors['proofAddress']" class="text-warning" style="font-weight: 800;">{{ fileErrors['proofAddress'] }}</div>
           </div>
+          <input type="hidden" formControlName="proofAddress" />
+
           <div class="col-12 col-lg-3 pb-3">
             <label>Upload Student ID</label>
-            <input type="file" formControlName="proofAge" class="form-control p-3" accept=".pdf, .jpg, .jpeg, .png" (change)="validateFileSize($event, 'proofAge')" />
+            <input type="file" class="form-control p-3" accept=".pdf, .jpg, .jpeg, .png" (change)="validateFileSize($event, 'proofAge')" />
             <small>Document Size has to be less than 1MB.</small>
-
             <div *ngIf="fileErrors['proofAge']" class="text-warning" style="font-weight: 800;">{{ fileErrors['proofAge'] }}</div>
           </div>
+          <input type="hidden" formControlName="proofAge" />
+
           <div class="form-group col-lg-4 text-white">
             <label>Photograph</label>
-            <input type="file" formControlName="photo" class="form-control p-3" accept="image/*" capture="user" (change)="validateFileSize($event, 'photo')" />
+            <input 
+              type="file" 
+              (change)="onFileSelected($event)"
+              class="form-control p-3" 
+              accept="image/*" 
+              capture="user"
+            />
             <small>Document Size has to be less than 1MB.</small>
-            <div *ngIf="fileErrors['photo']" class="text-warning" style="font-weight: 800;">{{ fileErrors['photo'] }}</div>
+            <div *ngIf="fileErrors['photo']" class="text-warning" style="font-weight: 800;">
+              {{ fileErrors['photo'] }}
+            </div>
           </div>
+          <!-- Hidden input or any other field to store base64 -->
+          <input type="hidden" formControlName="photoBase64" />
+          
+          
+          
+          
           
           
         </div>
