--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
-    <div class="container-fluid d-flex justify-content-center" style="position: fixed; bottom: 0px;">
-      <h6 class="text-white text-center">
+    <div class="container-fluid d-flex justify-content-center">
+      <h5 class="text-white text-center">
         &copy; 2024
         <a
           href="https://iterationtech.in/"
@@ -10,6 +10,6 @@
           >Iteration Technologies Private Limited.</a
         ><br/>
         All rights reserved.
-      </h6>
+      </h5>
     </div>
   </footer>
