--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
           <h2 class="py-4 text-white text-center">Types of Smart Card</h2>
           <div class="col-lg-3 col-sm-6 mb-5">
             <a
-              class="card service-card shadow-hover rounded-3 text-center align-items-center"
+              class="card h-100 service-card shadow-hover rounded-3 text-center align-items-center"
               [routerLink]="['/student']"
             
               id="showStudentPassButton"
@@ -29,7 +29,7 @@
           </div>
           <div class="col-lg-3 col-sm-6 mb-5">
             <a
-              class="card service-card shadow-hover rounded-3 text-center align-items-center"
+              class="card h-100 service-card shadow-hover rounded-3 text-center align-items-center"
               [routerLink]="['/senior-citizen']"
               
               id="showSeniorPassButton"
@@ -46,7 +46,7 @@
           </div>
           <div class="col-lg-3 col-sm-6 mb-5">
             <a
-              class="card service-card shadow-hover rounded-3 text-center align-items-center"
+              class="card h-100 service-card shadow-hover rounded-3 text-center align-items-center"
               [routerLink]="['/general']"
               id="showMonthlyPassButton"
             >
@@ -60,6 +60,11 @@
         </div>
        
       </div>
+
+      
+        <app-footer></app-footer>
+     
+
     </section>
 
 </main>
