--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,8 +33,8 @@
               </div>
         </div>
 
-        <div class="pt-5">
-          <app-footer></app-footer>
+        <div>
+          <app-footer style="position: fixed; bottom: 0px !important; width: 100%;"></app-footer>
         </div>
        
      
