--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3">
   <div class="container-fluid d-flex justify-content-between">
-    <a class="navbar-brand d-flex align-items-center" href="#">
+    <a class="navbar-brand d-flex align-items-center">
       <img
         src="../../assets/img/log.png"
         class="img-fluid nav-img"
@@ -10,7 +10,7 @@
     <div>
       <a
         [routerLink]="['/home']"
-        *ngIf="currentRoute !== '/home'"
+        *ngIf="currentRoute !== '/home' && currentRoute !== '/payment'"
         class="btn btn-lg bg-warning m-1"
         >Back</a
       >
