--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -67,7 +67,7 @@
           <div class="col-12 col-lg-6 pb-3">
             <label>Mobile Number*</label>
             <input
-              type="text"
+              type="number"
               formControlName="mobile"
               class="form-control p-3"
               placeholder="Please Enter Mobile Number"
@@ -120,6 +120,7 @@
             <input
               type="text"
               formControlName="age"
+              placeholder="Age"
               class="form-control p-3"
               readonly
             />
@@ -170,7 +171,7 @@
           </div>
         </div>
         <div class="form-group row py-2 text-white">
-          <div class="col-lg-4">
+          <div class="col-lg-4 pb-3">
             <label>State*</label>
             <input
               type="text"
@@ -180,20 +181,20 @@
               readonly
             />
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 pb-3">
             <label>City*</label>
-            <input
-              type="text"
-              formControlName="city"
-              class="form-control p-3"
-              value="Panaji"
-              readonly
-            />
+            <select formControlName="city" class="form-control p-3">
+              <option value="">Select City</option>
+              <option value="Panaji">Panaji</option>
+              <option value="Margoa">Margoa</option>
+              <option value="Mapusa">Mapusa</option>
+              <option value="Vasco">Vasco</option>
+            </select>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 pb-3">
             <label>Pincode*</label>
             <input
-              type="text"
+              type="number"
               formControlName="pincode"
               class="form-control p-3"
               placeholder="Please Enter Pincode"
@@ -211,8 +212,8 @@
           </div>
         </div>
         <div class="form-group row py-2 text-white">
-          <div class="col-lg-4">
-            <label>Email Address</label>
+          <div class="col-lg-4 pb-3">
+            <label>Email Address*</label>
             <input
               type="email"
               formControlName="email"
@@ -233,8 +234,8 @@
         </div>
         <h2 class="bus-pass-header header text-white">Institution details</h2>
         <div class="form-group row text-white">
-          <div class="col-12 col-lg-4">
-            <label for="institution_type">Institution Type</label>
+          <div class="col-12 col-lg-4 pb-3">
+            <label for="institution_type">Institution Type*</label>
             <select
               formControlName="institution_type"
               class="form-control p-3"
@@ -256,10 +257,11 @@
               Institution Type is required
             </div>
           </div>
-          <div class="col-12 col-lg-4">
-            <label for="inst_address">Institution Name</label>
+          <div class="col-12 col-lg-4 pb-3">
+            <label for="inst_address">Institution Name*</label>
             <textarea
               formControlName="inst_address"
+              placeholder="Please Enter Institution Name"
               class="form-control p-3"
               rows="2"
             ></textarea>
@@ -271,13 +273,13 @@
               class="text-warning"
               style="font-weight: 800"
             >
-              Institution Address is required
+              Institution Name is required
             </div>
           </div>
         </div>
         <div class="form-group row text-white d-lg-flex">
-          <div class="col-12 col-lg-4">
-            <label for="address_proof_type">Address Proof Type</label>
+          <!-- <div class="col-12 col-lg-4 pb-3">
+            <label for="address_proof_type">Address Proof Type*</label>
             <select
               formControlName="address_proof_type"
               class="form-control p-3"
@@ -289,6 +291,10 @@
               <option value="Voter ID">Voter ID</option>
               <option value="PAN">PAN</option>
               <option value="Aadhar Card">Aadhar Card</option>
+              <option value="Birth Certificate">Birth Certificate</option>
+              <option value="Driving License">Driving License</option>
+              <option value="Bank PassBook">Bank PassBook</option>
+              <option value="Cylinder Bill">Cylinder Bill</option>
             </select>
             <div
               *ngIf="
@@ -300,45 +306,74 @@
             >
               Address Proof Type is required
             </div>
-          </div>
-          <div class="col-12 col-lg-3 pb-3">
-            <label>Upload Address Proof Document</label>
-            <input type="file" class="form-control p-3" accept=".pdf, .jpg, .jpeg, .png" (change)="validateFileSize($event, 'proofAddress')" />
-            <small>Document Size has to be less than 1MB.</small>
-            <div *ngIf="fileErrors['proofAddress']" class="text-warning" style="font-weight: 800;">{{ fileErrors['proofAddress'] }}</div>
+          </div> -->
+          <div class="col-12 col-lg-4 pb-3">
+            <label>Upload Address Proof*</label>
+            <input
+              type="file"
+              class="form-control p-3"
+              accept=".pdf, .jpg, .jpeg, .png"
+              (change)="validateFileSize($event, 'proofAddress')"
+            />
+            <small
+              >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
+              than 1MB.</small
+            >
+            <div
+              *ngIf="fileErrors['proofAddress']"
+              class="text-warning"
+              style="font-weight: 800"
+            >
+              {{ fileErrors["proofAddress"] }}
+            </div>
           </div>
           <input type="hidden" formControlName="proofAddress" />
 
-          <div class="col-12 col-lg-3 pb-3">
-            <label>Upload Student ID</label>
-            <input type="file" class="form-control p-3" accept=".pdf, .jpg, .jpeg, .png" (change)="validateFileSize($event, 'proofAge')" />
-            <small>Document Size has to be less than 1MB.</small>
-            <div *ngIf="fileErrors['proofAge']" class="text-warning" style="font-weight: 800;">{{ fileErrors['proofAge'] }}</div>
+          <div class="col-12 col-lg-4 pb-3">
+            <label>Upload Student Proof*</label>
+            <input
+              type="file"
+              class="form-control p-3"
+              accept=".pdf, .jpg, .jpeg, .png"
+              (change)="validateFileSize($event, 'proofAge')"
+            />
+            <small
+              >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
+              than 1MB.</small
+            >
+            <div
+              *ngIf="fileErrors['proofAge']"
+              class="text-warning"
+              style="font-weight: 800"
+            >
+              {{ fileErrors["proofAge"] }}
+            </div>
           </div>
           <input type="hidden" formControlName="proofAge" />
 
           <div class="form-group col-lg-4 text-white">
-            <label>Photograph</label>
-            <input 
-              type="file" 
+            <label>Upload Photograph*</label>
+            <input
+              type="file"
               (change)="onFileSelected($event)"
-              class="form-control p-3" 
-              accept="image/*" 
+              class="form-control p-3"
+              accept="image/*"
               capture="user"
             />
-            <small>Document Size has to be less than 1MB.</small>
-            <div *ngIf="fileErrors['photo']" class="text-warning" style="font-weight: 800;">
-              {{ fileErrors['photo'] }}
+            <small
+              >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
+              than 1MB.</small
+            >
+            <div
+              *ngIf="fileErrors['photo']"
+              class="text-warning"
+              style="font-weight: 800"
+            >
+              {{ fileErrors["photo"] }}
             </div>
           </div>
           <!-- Hidden input or any other field to store base64 -->
           <input type="hidden" formControlName="photoBase64" />
-          
-          
-          
-          
-          
-          
         </div>
 
         <button type="submit" class="btn btn-lg btn-warning m-2">
@@ -346,5 +381,9 @@
         </button>
       </form>
     </div>
+
+    <!--Footer-->
+    <app-footer></app-footer>
+    <!--END-->
   </section>
 </main>
