--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,8 @@
        
 
         <div class="row pt-lg-5 d-flex justify-content-center">
-          <h2 class="py-4 text-white text-center">Types of Smart Card</h2>
-          <div class="col-lg-3 col-sm-6 mb-5">
+          <!-- <h2 class="py-4 text-white text-center">Types of Smart Card</h2> -->
+          <div class="col-lg-3 col-sm-6 my-5">
             <a
               class="card h-100 service-card shadow-hover rounded-3 text-center align-items-center"
               [routerLink]="['/student']"
