--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -25,7 +25,7 @@
           </form>
         </div>
 
-        <app-footer style="position: fixed; bottom: 0px !important; width: 100%;"></app-footer>
+        <!-- <app-footer style="position: fixed; bottom: 0px !important; width: 100%;"></app-footer> -->
 
       </section>
       
