--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -11,6 +11,7 @@
         <form [formGroup]="successForm">
           <h3 class="text-center text-white py-5">Your Application Number : <input type="text" class="form-control p-3 m-1" formControlName="applicationNumber" readonly/></h3>
         </form>
+        <h5 class="text-center text-white">SMS has been to sent to your Mobile Number. Kindly do the payment for further process.</h5>
       </div>
 
       <app-footer style="position: fixed; bottom: 0px !important; width: 100%;"></app-footer>
