--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,9 @@
     <section class="diagonal-background">
         <div class="container py-2">
             <div class="d-flex justify-content-center align-items-center">
-                <img src="../../assets/img/smart-city-nav-logo.png"  width="100px" height="100px"/>
+                <img src="../../assets/img/log.png"  width="300px" height="80px" style="border-radius: 10px;"/>
             </div>
-            <h1 class="font-sans-serif py-2 text-white text-center d-flex justify-content-center align-items-center flex-row" style="font-size: 38px !important">
+            <h1 class="font-sans-serif py-3 text-white text-center d-flex justify-content-center align-items-center flex-row" style="font-size: 38px !important">
                 Login to Your Account!
             </h1>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div>
-          <app-footer style="position: fixed; bottom: 0px !important; width: 100%;"></app-footer>
+          <app-footer></app-footer>
         </div>
        
      
