--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -173,23 +173,46 @@
         <div class="form-group row py-2 text-white">
           <div class="col-lg-4 pb-3">
             <label>State*</label>
-            <input
-              type="text"
-              formControlName="state"
-              class="form-control p-3"
-              value="Goa"
-              readonly
-            />
+            <select formControlName="state" class="form-control p-3">
+              <option value="">Select State</option>
+              <option value="Andhra Pradesh">Andhra Pradesh</option>
+              <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+              <option value="Assam">Assam</option>
+              <option value="Bihar">Bihar</option>
+              <option value="Chhattisgarh">Chhattisgarh</option>
+              <option value="Goa">Goa</option>
+              <option value="Gujarat">Gujarat</option>
+              <option value="Haryana">Haryana</option>
+              <option value="Himachal Pradesh">Himachal Pradesh</option>
+              <option value="Jharkhand">Jharkhand</option>
+              <option value="Karnataka">Karnataka</option>
+              <option value="Kerala">Kerala</option>
+              <option value="Madhya Pradesh">Madhya Pradesh</option>
+              <option value="Maharashtra">Maharashtra</option>
+              <option value="Manipur">Manipur</option>
+              <option value="Meghalaya">Meghalaya</option>
+              <option value="Mizoram">Mizoram</option>
+              <option value="Nagaland">Nagaland</option>
+              <option value="Odisha">Odisha</option>
+              <option value="Punjab">Punjab</option>
+              <option value="Rajasthan">Rajasthan</option>
+              <option value="Sikkim">Sikkim</option>
+              <option value="Tamil Nadu">Tamil Nadu</option>
+              <option value="Telangana">Telangana</option>
+              <option value="Tripura">Tripura</option>
+              <option value="Uttar Pradesh">Uttar Pradesh</option>
+              <option value="Uttarakhand">Uttarakhand</option>
+              <option value="West Bengal">West Bengal</option>
+            </select>
           </div>
           <div class="col-lg-4 pb-3">
             <label>City*</label>
-            <select formControlName="city" class="form-control p-3">
-              <option value="">Select City</option>
-              <option value="Panaji">Panaji</option>
-              <option value="Margoa">Margoa</option>
-              <option value="Mapusa">Mapusa</option>
-              <option value="Vasco">Vasco</option>
-            </select>
+            <input
+            type="text"
+            formControlName="city"
+            class="form-control p-3"
+            placeholder="Please Enter City"
+          />
           </div>
           <div class="col-lg-4 pb-3">
             <label>Pincode*</label>
@@ -376,9 +399,7 @@
           <input type="hidden" formControlName="photoBase64" />
         </div>
 
-        <button type="submit" class="btn btn-lg btn-warning m-2">
-          Make Payment
-        </button>
+        <button type="submit" class="btn btn-lg btn-warning m-2">Submit</button>
       </form>
     </div>
 
