--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,11 +5,11 @@
             <div class="d-flex justify-content-center align-items-center">
                 <img src="../../assets/img/log.png"  width="300px" height="80px" style="border-radius: 10px;"/>
             </div>
-            <h1 class="font-sans-serif py-3 text-white text-center d-flex justify-content-center align-items-center flex-row" style="font-size: 38px !important">
+            <!-- <h1 class="font-sans-serif py-3 text-white text-center d-flex justify-content-center align-items-center flex-row" style="font-size: 38px !important">
                 Login to Your Account!
-            </h1>
+            </h1> -->
 
-            <div class="d-flex justify-content-center align-items-center text-center text-white">
+            <div class="d-flex justify-content-center align-items-center text-center text-white py-5 my-5">
         
                 <!-- User Form Section -->
                 <form class="user-form text-white p-4 rounded shadow" style="width: 100%; max-width: 400px; background-color: #0077A2;" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
