--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -208,11 +208,11 @@
           <div class="col-lg-4 pb-3">
             <label>City*</label>
             <input
-            type="text"
-            formControlName="city"
-            class="form-control p-3"
-            placeholder="Please Enter City"
-          />
+              type="text"
+              formControlName="city"
+              class="form-control p-3"
+              placeholder="Please Enter City"
+            />
           </div>
           <div class="col-lg-4 pb-3">
             <label>Pincode*</label>
@@ -236,7 +236,7 @@
         </div>
         <div class="form-group row py-2 text-white">
           <div class="col-lg-4 pb-3">
-            <label>Email Address*</label>
+            <label>Email Address</label>
             <input
               type="email"
               formControlName="email"
@@ -335,13 +335,14 @@
             <input
               type="file"
               class="form-control p-3"
-              accept=".pdf, .jpg, .jpeg, .png"
+              accept="image/*"
+              capture="environment"
               (change)="validateFileSize($event, 'proofAddress')"
             />
-            <small
+            <!-- <small
               >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
               than 1MB.</small
-            >
+            > -->
             <div
               *ngIf="fileErrors['proofAddress']"
               class="text-warning"
@@ -357,13 +358,14 @@
             <input
               type="file"
               class="form-control p-3"
-              accept=".pdf, .jpg, .jpeg, .png"
+              accept="image/*"
+              capture="environment"
               (change)="validateFileSize($event, 'proofAge')"
             />
-            <small
+            <!-- <small
               >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
               than 1MB.</small
-            >
+            > -->
             <div
               *ngIf="fileErrors['proofAge']"
               class="text-warning"
@@ -374,7 +376,7 @@
           </div>
           <input type="hidden" formControlName="proofAge" />
 
-          <div class="form-group col-lg-4 text-white">
+          <div class="form-group col-lg-4 text-white pb-3">
             <label>Upload Photograph*</label>
             <input
               type="file"
@@ -383,10 +385,10 @@
               accept="image/*"
               capture="user"
             />
-            <small
+            <!-- <small
               >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
               than 1MB.</small
-            >
+            > -->
             <div
               *ngIf="fileErrors['photo']"
               class="text-warning"
@@ -399,7 +401,8 @@
           <input type="hidden" formControlName="photoBase64" />
         </div>
 
-        <button type="submit" class="btn btn-lg btn-warning m-2">Submit</button>
+        <button type="submit" class="btn btn-lg btn-warning m-2" [disabled]="buttonDisable">Submit</button>
+        <a [routerLink]="['/home']" class="btn btn-lg btn-warning m-2">Back</a>
       </form>
     </div>
 
