--- a/src/app/senior-citizen/senior-citizen.component.html
+++ b/src/app/senior-citizen/senior-citizen.component.html
@@ -238,7 +238,7 @@
         </div>
         <div class="form-group row py-2 text-white">
           <div class="col-lg-4 pb-3">
-            <label>Email Address*</label>
+            <label>Email Address</label>
             <input
               type="email"
               formControlName="email"
@@ -293,13 +293,14 @@
             <input
               type="file"
               class="form-control p-3"
-              accept=".pdf, .jpg, .jpeg, .png"
+              accept="image/*"
+              capture="environment"
               (change)="validateFileSize($event, 'proofAddress')"
             />
-            <small
+            <!-- <small
               >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
               than 1MB.</small
-            >
+            > -->
             <div
               *ngIf="fileErrors['proofAddress']"
               class="text-warning"
@@ -315,13 +316,14 @@
             <input
               type="file"
               class="form-control p-3"
-              accept=".pdf, .jpg, .jpeg, .png"
+              accept="image/*"
+              capture="environment"
               (change)="validateFileSize($event, 'proofAge')"
             />
-            <small
+            <!-- <small
               >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
               than 1MB.</small
-            >
+            > -->
             <div
               *ngIf="fileErrors['proofAge']"
               class="text-warning"
@@ -341,10 +343,10 @@
               capture="user"
               (change)="onFileSelected($event)"
             />
-            <small
+            <!-- <small
               >Document should of type PNG/JPG/JPEG/PDF and Size has to be less
               than 1MB.</small
-            >
+            > -->
             <div
               *ngIf="fileErrors['photo']"
               class="text-warning"
@@ -355,7 +357,9 @@
           </div>
           <input type="hidden" formControlName="photoBase64" />
         </div>
-        <button type="submit" class="btn btn-lg btn-warning m-2">Submit</button>
+        <button type="submit" class="btn btn-lg btn-warning m-2" [disabled]="buttonDisable">Submit</button>
+        <a [routerLink]="['/home']" class="btn btn-lg btn-warning m-2">Back</a>
+
       </form>
     </div>
 
