--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,20 +1,31 @@
 <main class="main" id="top">
-    <!--NAVBAR-->
-   <app-navbar></app-navbar>
-    <!--END-->
-    <section class="diagonal-background">
-      <div class="container py-5">
-        <h1 class="text-center text-white pt-5 mt-5">
-           Successfully Registered !
-        </h1>
+  <!--NAVBAR-->
+  <app-navbar></app-navbar>
+  <!--END-->
+  <section class="diagonal-background">
+    <div class="container py-5">
+      <h1 class="text-center text-white pt-5 mt-5">
+        Successfully Registered !
+      </h1>
 
-        <form [formGroup]="successForm">
-          <h3 class="text-center text-white py-5">Your Application Number : <input type="text" class="form-control p-3 m-1" formControlName="applicationNumber" readonly/></h3>
-        </form>
-        <h5 class="text-center text-white">SMS has been to sent to your Mobile Number. Kindly do the payment for further process.</h5>
+      <form [formGroup]="successForm">
+        <h3 class="text-center text-white pt-5 pb-3">
+          Your Application Number :
+          <p id="applicationNumber"></p>
+        </h3>
+      </form>
+      <h5 class="text-center text-white">
+        SMS has been to sent to your Mobile Number. Kindly do the payment for
+        further process.
+      </h5>
+
+      <div class="d-flex justify-content-center">
+        <a [routerLink]="['/home']" class="btn btn-lg btn-warning m-2">Back To Home</a>
       </div>
+    </div>
 
-      <app-footer style="position: fixed; bottom: 0px !important; width: 100%;"></app-footer>
-
-    </section>
-  </main>
+    <app-footer
+      style="position: fixed; bottom: 0px !important; width: 100%"
+    ></app-footer>
+  </section>
+</main>
