removed address proof required field

--- a/src/app/general/general.component.html
+++ b/src/app/general/general.component.html
@@ -278,7 +278,7 @@
             </div>
           </div> -->
           <div class="col-12 col-lg-4 pb-3">
-            <label>Upload Address Proof*</label>
+            <label>Upload Address Proof</label>
             <input
               type="file"
               class="form-control p-3"
